# ghost-auth

./: .gitignore  CONTRIBUTING.md  README.md  add-ext-translations.js  build-ios.sh  export-ios.sh  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
e2e/: app.spec.ts  helpers.ts
extension/: manifest.chrome.json  manifest.firefox.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extension/src/background/: service-worker.ts
extension/src/core/: backup.test.ts  backup.ts  constants.ts  crypto.ts  pin.ts  storage.test.ts  storage.ts  sync-ws-client.ts
extension/src/popup/: App.svelte  index.html  main.ts  theme-init.js
extension/src/test/: setup.ts
patches/tauri-plugin-share-file/src/: lib.rs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  import.rs  keystore.rs  lib.rs  pin.rs  storage.rs  sync.rs  sync_transport.rs  sync_ws.rs  totp.rs
src/lib/components/: About.svelte  AccountCard.svelte  AccountCard.test.ts  AccountList.svelte  AddAccount.svelte  AddAccount.test.ts  BackupExport.svelte  BackupExport.test.ts  BackupImport.svelte  BiometricPrompt.svelte  CountdownRing.svelte  EditAccount.svelte  ExportQr.svelte  Help.svelte  ImportExternal.svelte  LanguageSelect.svelte  LockScreen.svelte  LockScreen.test.ts  PinRemove.svelte  PinRemove.test.ts  PinSetup.svelte  PinSetup.test.ts  RecoveryCodes.svelte  Settings.svelte  SyncInitiate.svelte  SyncJoin.svelte  Toast.svelte  WebScanner.svelte
src/lib/stores/: accounts.test.ts  accounts.ts  locale.svelte.ts  theme.svelte.ts
src/lib/utils/: focusTrap.ts  otpauth.ts  (+1 more)
src/test/: setup.ts
web/: index.html
web/privacy/: index.html
(+101 files in other folders)
