[package]
name = "ghost-auth"
version = "1.2.21"
description = "A cross-platform authenticator app"
authors = ["Kestrel AS"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "ghost_auth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
totp-rs = { version = "5", features = ["otpauth"] }
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
data-encoding = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-edge-to-edge = "0.3"
tauri-plugin-share-file = { path = "../patches/tauri-plugin-share-file" }
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
prost = "0.13"
base64 = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
local-ip-address = "0.6"
tungstenite = "0.24"

# OS keychain for secure key storage (desktop only)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"

# Android KeyStore via JNI
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# iOS Keychain via Security.framework
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2"

# Local patch: fix iOS crash in barcode scanner cancel() — UIKit ops must run on main thread
[patch.crates-io]
tauri-plugin-barcode-scanner = { path = "../patches/tauri-plugin-barcode-scanner" }
